--- a/upload/admin/view/template/extension/module/custom_menu_add_nik.twig
+++ b/upload/admin/view/template/extension/module/custom_menu_add_nik.twig
@@ -455,21 +455,21 @@
   </div>
   <script type="text/javascript">
 
-      $(".horizontal-menu li ul").hide(); // скрываем выпадающее меню
-      $(".horizontal-menu li:has('.submenu')").on('click', function(e){
-          e.preventDefault();
-          let submenus = $('.submenu');
-          for (let t = 0; t < submenus.length; t++) {
-              if($(this).find('ul.submenu')[0] !== submenus[t]) {
-                  submenus[t].style.display = 'none';
-                  submenus[t].parentNode.classList.remove('active')
-              }
-          }
-          $(this).toggleClass('active')
-          $(this).find('ul.submenu').toggle();
+    $(".horizontal-menu li ul").hide(); // скрываем выпадающее меню
+    /* отбираем элемент списка, который содержит элемент с классом .submenu и добавляем ему функцию при наведении, которая показывает и скрывает выпадающее меню */
+    $(".horizontal-menu li:has('.submenu')").on('click', function(e){
+        e.preventDefault();
+        let submenus = $('.submenu');
+        for (let t = 0; t < submenus.length; t++) {
+            if($(this).find('ul.submenu')[0] !== submenus[t]) {
+                submenus[t].style.display = 'none';
+                submenus[t].parentNode.classList.remove('active')
+            }
+        }
+        $(this).toggleClass('active')
+        $(this).find('ul.submenu').toggle();
 
-      } /* отбираем элемент списка, который содержит элемент с классом .submenu и добавляем ему функцию при наведении, которая показывает и скрывает выпадающее меню */
-      );
+    });
 
     var dropdown = document.getElementsByClassName("dropdown-btn");
     var i;
